# EvoSkill

./: .env.example  .gitignore  README.md  answer-output-normalizer.skill  pyproject.toml
.claude/: program.yaml
.claude/skills/brainstorming/: SKILL.md
.claude/skills/data-extraction-verification/: SKILL.md
.claude/skills/search-persistence-protocol/: SKILL.md
.github/workflows/: ci.yml  devin-on-issue.yml
evoskill/: __init__.py  backend.py  config.py  decorator.py  skill.py  store.py  synthesizer.py
notebooks/: graphs.ipynb
src/agent_profiles/prompt_generator/: prompt.py
src/agent_profiles/proposer/: prompt.py
src/loop/: runner.py
src/registry/: manager.py
tests/: test_decorator.py  test_sanity.py  test_store.py  test_synthesizer.py
