[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evoskill"
version = "0.1.0"
description = "Lightweight runtime skill-learning for AI agents via a simple decorator."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
